Adding Librezo to the server providers

--- a/docs/admin/05.get_started/10.providers/20.servers.mdx
+++ b/docs/admin/05.get_started/10.providers/20.servers.mdx
@@ -16,3 +16,4 @@ import {HighlightFFDN, HighlightNonProfit, HighlightCHATONS} from '@site/src/com
 
 * [ReflexLibre](https://reflexlibre.net) (France only) <HighlightCHATONS/>
 * [Numericoop](https://numericoop.fr/solution-sur-mesure/) (France only) <HighlightCHATONS/>
+* [Librezo](https://librezo.fr/) (France only)
