--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/20.servers.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/20.servers.mdx
@@ -13,6 +13,12 @@ import {HighlightFFDN, HighlightNonProfit, HighlightCHATONS} from '@site/src/com
 
 * [Scaleway Dedibox](https://www.scaleway.com/en/dedibox/operating-systems/) (server dédié)
 
+* [Numericoop](https://numericoop.fr/solution-sur-mesure/) (VPS) <HighlightCHATONS/
+
 ## Externalisation informatique YunoHost 
 
 * [ReflexLibre](https://reflexlibre.net) (seulement en France) <HighlightCHATONS/>
+
+* [Numericoop](https://numericoop.fr/solution-sur-mesure/) (seulement en France) <HighlightCHATONS/>
+
+* [Librezo](https://librezo.fr) (seulement en France)
