--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/20.servers.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/05.get_started/10.providers/20.servers.mdx
@@ -13,7 +13,7 @@ import {HighlightFFDN, HighlightNonProfit, HighlightCHATONS} from '@site/src/com
 
 * [Scaleway Dedibox](https://www.scaleway.com/en/dedibox/operating-systems/) (server dédié)
 
-* [Numericoop](https://numericoop.fr/solution-sur-mesure/) (VPS) <HighlightCHATONS/
+* [Numericoop](https://numericoop.fr/solution-sur-mesure/) (VPS) <HighlightCHATONS/>
 
 ## Externalisation informatique YunoHost 
 
