--- a/docs/packaging/60.advanced/50.hooks.mdx
+++ b/docs/packaging/60.advanced/50.hooks.mdx
@@ -285,7 +285,7 @@ This hook is run at the end of the command `yunohost domain dns suggest` or equi
 
 Thanks to This hook you can customize
 
-##### Environment variables
+#### Environment variables
 
 - `base_domain`: the top-level part of the domain
 - `suffix`: the subdomain part of the domain
