--- a/docs/admin/55.upgrade/12.0-bookworm/index.mdx
+++ b/docs/admin/55.upgrade/12.0-bookworm/index.mdx
@@ -40,22 +40,26 @@ then read carefully and accept the disclaimer.
 
 Run one or more of the following commands to check the system actually updated. Sometimes some parts of the migration/upgrade don't happen.
 
-```lsb_release -a```
+```
+lsb_release -a
 
-```cat /etc/debian_version```
+cat /etc/debian_version
 
-```yunohost --version```
+yunohost --version
+```
 
 #### Forcing part of the update to run
 Several people have received alerts that the upgrade process successfully completed, but their system still shows they are running Debian Bullseye (11). If this happens to you, you can run:
-```yunohost 
-tools migrations run 0027_migrate_to_bookworm --force-rerun --accept-disclaimer
+```
+yunohost tools migrations run 0027_migrate_to_bookworm --force-rerun --accept-disclaimer
 ```
 
 #### Agreeing to the new Terms of Service via command line
-The process 0027 has a section where you have to manually agree to the new Terms of Service in Yunohost 12. This is what you type: 
-```yunohost 
-tools migrations run 0031_terms_of_services --accept-disclaimer
+
+YunoHost 12.x now requires that you agree to the new [Terms of Service](https://doc.yunohost.org/terms_of_services/). After reading and accepting them you can run:
+
+```
+yunohost tools migrations run 0031_terms_of_services --accept-disclaimer
 ```
 
 ## During the migration
