--- a/docs/admin/55.upgrade/12.0-bookworm/index.mdx
+++ b/docs/admin/55.upgrade/12.0-bookworm/index.mdx
@@ -28,13 +28,39 @@ Note that even if you close the webadmin page for some reason, the migration wil
 
 ### From the command line
 
-Just run :
+Run :
 
 ```bash
 sudo yunohost tools migrations run
 ```
 
 then read carefully and accept the disclaimer.
+
+#### Checking the update 
+
+Run one or more of the following commands to check the system actually updated. Sometimes some parts of the migration/upgrade don't happen.
+
+```
+lsb_release -a
+
+cat /etc/debian_version
+
+yunohost --version
+```
+
+#### Forcing part of the update to run
+Several people have received alerts that the upgrade process successfully completed, but their system still shows they are running Debian Bullseye (11). If this happens to you, you can run:
+```
+yunohost tools migrations run 0027_migrate_to_bookworm --force-rerun --accept-disclaimer
+```
+
+#### Agreeing to the new Terms of Service via command line
+
+YunoHost 12.x now requires that you agree to the new [Terms of Service](https://doc.yunohost.org/terms_of_services/). After reading and accepting them you can run:
+
+```
+yunohost tools migrations run 0031_terms_of_services --accept-disclaimer
+```
 
 ## During the migration
 
