--- a/docs/packaging/10.manifest/index.mdx
+++ b/docs/packaging/10.manifest/index.mdx
@@ -92,7 +92,7 @@ For the `sso` parameter, not to be confused with the `ldap` key. This correspond
 - `"http_headers"`: for the account provisioned by the HTTP Header: `Ynh-User`, `Ynh-User-Email`, `Ynh-User-Fullname` headers. For PHP apps it could be also provided by the standard `REMOTE_USER` parameter.
 - `"auth_basic"`: for apps which takes advantage of the basic authentication ([RFC 7617](https://datatracker.ietf.org/doc/html/rfc7617)).
 - `"client_sso"`: for the client apps for which the usage depends on whether the server supports it or not. This is the case for instance with [Element](https://github.com/YunoHost-Apps/element_ynh) or [Agendav](https://github.com/YunoHost-Apps/agendav_ynh). Note this only intended for app fully written in Javascript. If your app have some server side code, you should not use this value.
-- `"oidc"`: for apps which use OIDC for authentication. Note for now code don't provide OIDC (until [#676](https://github.com/YunoHost/issues/issues/676) is fixed). For now the apps which use OIDC generally use [the dex_ynh app](https://github.com/YunoHost-Apps/dex_ynh).
+- `"oidc"`: for apps which use OIDC for authentication. Note for now core don't provide OIDC (until [#676](https://github.com/YunoHost/issues/issues/676) is fixed). For now the apps which use OIDC generally use [the dex_ynh app](https://github.com/YunoHost-Apps/dex_ynh).
 
 Note we intentionally didn't added an `other` value. In case you don't find a value which match your use case, please [create a issue](https://github.com/YunoHost/issues/issues) to discuss to add a new value corresponding to your usage.
 
@@ -107,7 +107,7 @@ The declaration of antifeatures is a 3-steps process:
 - Find the relevant antifeature in [the list of supported antifeatures](https://github.com/YunoHost/apps/blob/master/antifeatures.toml)
 - Declare the app's antifeature in the [app catalog](https://github.com/YunoHost/apps/blob/master/apps.toml)
 - Describe the app's antifeature in its `manifest.toml`:
-  
+
   ```toml
   [antifeatures]
   arbitrary-limitations.en = "Some description about the specific limitations of this app."
@@ -185,7 +185,7 @@ The resource section corresponds to recurring app needs that are to be provision
 
     [resources.permissions]
     main.url = "/"
-    
+
     [resources.apt]
     packages = "nyancat, lolcat, sl"
 ```
