dev: index: Reword titles (no infinitive form)

--- a/docs/dev/index.mdx
+++ b/docs/dev/index.mdx
@@ -26,7 +26,7 @@ This section is under refactoring.
 
 <Columns>
   <Column className='text--center'>
-    ## <FAIcon icon='fa-user'/> Helping users
+    ## <FAIcon icon='fa-user'/> Help users
   </Column>
 
   <Column className='text--center'>
@@ -63,7 +63,7 @@ This section is under refactoring.
 
 <Columns>
   <Column className='text--center'>
-    ## <FAIcon icon='fa-flask'/> Testing
+    ## <FAIcon icon='fa-flask'/> Test
   </Column>
 
   <Column className='text--center'>
@@ -75,7 +75,7 @@ This section is under refactoring.
 
 <Columns>
   <Column className='text--center'>
-    ## <FAIcon icon='fa-gift'/> Packaging
+    ## <FAIcon icon='fa-gift'/> Package Apps
   </Column>
 
   <Column className='text--center'>
@@ -88,7 +88,7 @@ This section is under refactoring.
 
 <Columns>
   <Column className='text--center'>
-    ## <FAIcon icon='fa-cog'/> Coding
+    ## <FAIcon icon='fa-cog'/> Develop
   </Column>
 
   <Column className='text--center'>
