dev: doc: de: redirect to english doc

--- a/i18n/de/docusaurus-plugin-content-docs/current/dev/05.doc/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/dev/05.doc/index.mdx
@@ -7,6 +7,10 @@ routes:
   default: '/doc'
 ---
 
+:::warning
+This documentation is out of date. Please follow the English documentation instead.
+:::
+
 ## Über GitHub
 
 Die YunoHost-Dokumentation wird über ein [Git-Repository](https://github.com/YunoHost/doc) verwaltet.
