Fix devenv bash command

--- a/docs/dev/15.core/10.devenv.mdx
+++ b/docs/dev/15.core/10.devenv.mdx
@@ -73,7 +73,7 @@ curl https://raw.githubusercontent.com/YunoHost/install_script/main/trixie | bas
 You might also want to pass arguments to the script:
 
 ```
-curl https://raw.githubusercontent.com/YunoHost/install_script/main/trixie | bash -d unstable
+curl https://raw.githubusercontent.com/YunoHost/install_script/main/trixie | bash -s -- -d unstable
 ```
 
 ## `ynh-dev`
