--- a/i18n/fr/docusaurus-plugin-content-docs/current/dev/15.core/05.architecture.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/dev/15.core/05.architecture.mdx
@@ -5,7 +5,7 @@ title: Architecture de YunoHost
 Le cœur de YunoHost est écrit en Python autour du serveur `yunohost`, mais il
 est composé de quatre composants principaux :
 
-#### Moulinette
+## [Moulinette](https://github.com/YunoHost/moulinette)
 
 C'est un petit framework "fait maison". [Son rôle principal](https://moulinette.readthedocs.io/en/latest/actionsmap.html) est de permettre de construire une API Web et une API en ligne de commande à partir d'un même code Python et d'un schéma YAML que nous appelons [l'actionmap](https://github.com/YunoHost/yunohost/blob/dev/share/actionsmap.yml).
 
@@ -13,7 +13,7 @@ Il prend en charge d'autres mécanismes tels que l'authentification, l'internati
 
 Moulinette dispose de sa propre documentation [ici](https://moulinette.readthedocs.io/en/latest/).
 
-#### YunoHost
+## [YunoHost](https://github.com/YunoHost/yunohost)
 
 C'est le cœur même de YunoHost. Il contient :
 
@@ -23,16 +23,18 @@ C'est le cœur même de YunoHost. Il contient :
 - des [chaînes internationalisées](https://github.com/YunoHost/yunohost/tree/dev/locales)
 - des [tests](https://github.com/YunoHost/yunohost/tree/dev/tests)
 
-#### SSOwat
+## [SSOwat](https://github.com/YunoHost/ssowat)
 
-C'est le système de connexion unique (single sign-on) de YunoHost. Il contient principalement :
-
-- [du code LUA](https://github.com/YunoHost/ssowat) interfacé directement avec NGINX et qui gère tous les aspects "techniques" de l'authentification et de la gestion des accès aux ressources.
-- le [portail web utilisateur](https://github.com/YunoHost/SSOwat/tree/dev/portal) qui est l'interface finale visible par les utilisateurs de YunoHost.
+C'est le backend de connexion unique (single sign-on) de YunoHost. Il est basé sur des stripts Lua interfacés directement avec NGINX
+et qui gère tous les aspects "techniques" de l'authentification et de la gestion des accès aux ressources.
 
 SSOwat est configuré via `/etc/ssowat/conf.json` qui est généré par YunoHost.
 
-#### YunoHost-admin
+## [YunoHost-portal](https://github.com/YunoHost/yunohost-portal)
+
+Ce portail est utilisé par les utilisateurs pour se connecter et lister les applications installées.
+
+## [YunoHost-admin](https://github.com/YunoHost/yunohost-admin)
 
 C'est une dépendance *optionnelle* de YunoHost et correspond à une interface pour l'API web créée par YunoHost et Moulinette (service `yunohost-api`).
 
