Add instructions for Pi2

--- a/docs/admin/05.get_started/20.install_on/raspberry_pi.mdx
+++ b/docs/admin/05.get_started/20.install_on/raspberry_pi.mdx
@@ -23,6 +23,12 @@ import YunoHostImagesList from '@site/src/components/YunoHostImagesList';
 - A [reasonable ISP](/admin/get_started/providers/isp/), preferably with a good and unlimited upstream bandwidth
 - A computer to read this guide, flash the image and access your server.
 
+:::warning
+Support for Raspberry Pi 2 was dropped. If you really want to install YunoHost on a Pi 2, download and install
+"Raspberry Pi OS (32-bit)" from [the official website](https://www.raspberrypi.com/software/operating-systems/)
+and then [follow the instructions](./on_top_of_debian) to install YunoHost on Debian.
+:::
+
 ## <FAIcon icon="fa-download" /> Download the YunoHost image
 
 :::note
