--- a/i18n/es/docusaurus-plugin-content-docs/current/admin/01.about_self_hosting.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/admin/01.about_self_hosting.mdx
@@ -1,11 +1,9 @@
 ---
-title: About self-hosting
+title: Sobre el autoalojamiento (self-hosting)
 ---
 
-El auto-alojamiento se refiere al hecho de tener y administrar tú tu propio servidor, normalmente en tu casa, para hospedar tus datos personales y servicios, en lugar de depender de terceros. Por ejemplo, es posible el auto-hospedaje de tu blog, de manera que este "viva" dentro de una máquina que controlas, en lugar de que se aloje en un ordenador de otra persona/empresa (alias La Nube) contra dinero, publicidad o cesión de datos privados.
+El **autoalojamiento** (o *self-hosting*) significa poseer y administrar tu propio servidor, normalmente en casa, para **alojar** tus **datos personales** y servicios, en lugar de depender exclusivamente de terceros. Por ejemplo, es posible el **autoalojamiento** de tu blog, de manera que este "viva" dentro de una máquina que **tú** controlas, en lugar de que se aloje en el ordenador de otra persona o empresa (**alias La Nube**) a cambio de dinero, publicidad o **cesión** de datos privados.
 
-Auto-alojar implica disponer de un servidor. Un servidor es un ordenador destinado a ser accesible en la red las 24 horas del día y que normalmente no tiene ni pantalla ni teclado, ya que se controla a distancia. Contrariamente a una creencia extendida, los servidores no son necesariamente máquinas enormes y muy potentes: en la actualidad, una pequeña placa ARM de unos ~30€/$ es suficiente para el auto-hospedaje.
+El **autoalojamiento** implica disponer de un servidor. Un servidor es un ordenador destinado a ser accesible en la red las **24 horas del día** y que normalmente no tiene ni pantalla ni teclado, ya que se controla a distancia. **Contrariamente** a una creencia **extendida**, los servidores no son necesariamente máquinas enormes y muy potentes: en la actualidad, una pequeña placa **ARM** de unos **\~30 €/$** es suficiente para el **autoalojamiento**.
 
-![Internet topologies diagram](/img/internet_topologies.png)
-
-La práctica del auto-alojamiento no convierte "tu internet" más segura y tampoco proporciona anonimato por si mismo. El objetivo es generalmente generar autonomía y control de tus servicios y tus datos - lo que también implica una responsabilidad.
+La práctica del **autoalojamiento** no convierte "tu internet" en algo más seguro y tampoco proporciona anonimato por **sí mismo**. El objetivo es generalmente generar autonomía y **control** de tus servicios y tus datos — lo que también implica una **responsabilidad**.
