fix <details> tag

--- a/docs/packaging/60.advanced/20.config_panels.mdx
+++ b/docs/packaging/60.advanced/20.config_panels.mdx
@@ -292,6 +292,7 @@ set__timezone() {
     ynh_print_info "The timezone has been changed to $timezone"
 }
 ```
+</details>
 
 ### "`Bind`" statement with custom setters
 
