--- a/i18n/fr/docusaurus-plugin-content-docs/current/admin/30.apps/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/admin/30.apps/index.mdx
@@ -9,9 +9,9 @@ import {HighlightApplications, HighlightAppInstall} from '@site/src/components/H
 
 L'une des fonctionnalités principales de YunoHost est la possibilité d'installer facilement des applications immédiatement utilisables. Pour donner des exemples d'application, il est possible d'installer un système de blog, un "cloud" (pour héberger et synchroniser des fichiers), un site web, un lecteur RSS...
 
-Les applications peuvent être installées et gérées au travers de l'interface web d'administration <HighlightApplications/> ou bien avec les commandes de catégorie `yunohost app`.
+Les applications peuvent être installées et gérées au travers de l'interface web d'administration <HighlightApplications/> ou bien avec les commandes de la catégorie `yunohost app`.
 
-<Figure alt="Apps list" caption="Liste d'Applications dans l'interface web d'administration, avec le bouton Installer." src="/img/webadmin/apps_list.png"/>
+<Figure alt="Liste des applications" caption="Liste d'applications dans l'interface web d'administration, avec le bouton Installer." src="/img/webadmin/apps_list.png"/>
 
 Le catalogue des applications et leurs catégories peut être parcouru depuis l'interface web d'administration en cliquant sur le bouton <HighlightAppInstall/> dans la liste des applications, ou depuis cette documentation.
 
