Yolorework the 'contribute' section and architecture

--- a/docs/dev/50.packaging/10.manifest.mdx
+++ b/docs/dev/50.packaging/10.manifest.mdx
@@ -1,5 +1,5 @@
 ---
-title: The manifest
+title: manifest.toml
 ---
 
 The app's `manifest.toml` can be seen as the ID card of the app. It declares various basic metadata such as the id, name, description of the app, its version, install questions to be asked to the admin prior to installation, etc.
@@ -7,7 +7,7 @@ The app's `manifest.toml` can be seen as the ID card of the app. It declares var
 In this page, the data are described according to a somewhat dummy app called `helloworld`
 
 :::tip
-If you want to convert an application from the packaging v1 to v2 format, [please see here](/packaging/advanced/packaging_v2)!
+If you want to convert an application from the packaging v1 to v2 format, [please see here](/dev/packaging/advanced/packaging_v2)!
 :::
 
 ## General information
@@ -73,7 +73,7 @@ ram.runtime = "1M"
 ```
 
 - `yunohost` (`str`) contains the minimum YunoHost version required for this app to work.
-- `helpers_version` (`str`) contains the version of the package helpers used by the application; supported versions are [2.0](/packaging/scripts/helpers_v2.0) and [2.1](/packaging/scripts/helpers_v2.1)
+- `helpers_version` (`str`) contains the version of the package helpers used by the application; supported versions are [2.0](/dev/packaging/scripts/helpers_v2.0) and [2.1](/dev/packaging/scripts/helpers_v2.1)
 - `architectures` : `"all"` OR a list of supported archs using the `dpkg --print-architecture` nomenclature, i.e. among : `amd64` (= x86 64bit), `i386` (= x86 32bit), `armhf` (= ARM 32bit), `arm64` (= ARM 64bit)
 - `multi_instance` (`bool`) : wether or not the app supports being installed multiple time <small>(in which case, during installation, the actual app id is not just the `id` of the manifest, but something like `hellowold__2`, `helloworld__3`, etc. for subsequent installs)</small>
 - `ldap` (`bool` OR `"not_relevant"`) :  not to confused with the `sso` key : this corresponds to wether or not the app is configured to use YunoHost's LDAP DB as the user account DB. This should be set to `"not_relevant"` if and only if there is no notion of user account for this app (for example, Hextris). LDAP integration is often a prerequisite for the SSO to work.
@@ -186,4 +186,4 @@ In this example:
 
 ### List of app resources
 
-The full documentation on resources is available [here](/packaging/manifest/resources).
+The full documentation on resources is available [here](/dev/packaging/resources).
