--- a/docs/dev/50.packaging/50.publish.mdx
+++ b/docs/dev/50.packaging/50.publish.mdx
@@ -7,7 +7,7 @@ in particular [the `apps.toml` file](https://github.com/YunoHost/apps/blob/maste
 
 For your app to be made available to everybody, you should make a pull request that adds your app inside the `apps.toml`
 (see the [detailed instructions in the README](https://github.com/YunoHost/apps/#how-to-add-your-app-to-the-application-catalog)).
-Before doing so, please make sure to check that your app is compatible with [the official app catalog policy](/packaging/policy).
+Before doing so, please make sure to check that your app is compatible with [the official app catalog policy](/dev/packaging/policy).
 
 Note that the "real" catalog used by YunoHost servers is [https://app.yunohost.org/default/v3/apps.json](https://app.yunohost.org/default/v3/apps.json) which is rebuilt every 4 hours.
 
