--- a/docs/dev/80.core/20.ynh_core.mdx
+++ b/docs/dev/80.core/20.ynh_core.mdx
@@ -1,8 +1,7 @@
 ---
-title: The server and command line
+title: Working on the API and CLI
 ---
 
-# Working on the server and CLI
 
 When using `ynh-dev`, run in the container:
 
