--- a/docs/dev/80.core/25.ynh_admin.mdx
+++ b/docs/dev/80.core/25.ynh_admin.mdx
@@ -1,14 +1,16 @@
 ---
-title: The web admin
+title: Working on the YunoHost web admin
 ---
-
-# Working on the YunoHost web admin
 
 When using `ynh-dev`, run in the container:
 
 ```
 ./ynh-dev use-git yunohost-admin
 ```
+
+:::danger[FIXME]
+The rest of this section is completely outdated and should be rewritten from scratch...
+:::
 
 It launches gulp, such as each time you modify sources, it recompiles the code and
 you can use it by refreshing (Ctrl+F5) your web administration.
