--- a/docs/dev/80.core/index.mdx
+++ b/docs/dev/80.core/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: Core development
+title: ⚙️ Core development
 ---
 
-You have found a bug or want to work on a new feature in the Yunohost core ?
+You have found a bug or want to work on a new feature in the Yunohost core?
 Well, thanks!
 
-If you're looking for stuff to implement or fix, please see [the bug-tracker](https://github.com/YunoHost/issues/issues).
+If you're looking for stuff to implement or fix, please see [the project's issue tracker](https://github.com/YunoHost/issues/issues).
 
 We recommend to **not** develop on your own machine where you might store important
 data. Instead, most of the testing can be done in [Incus containers](./devenv#incus).
