--- a/docs/dev/index.mdx
+++ b/docs/dev/index.mdx
@@ -1,99 +1,46 @@
 ---
 sidebar_position: 0
-title: Developer documentation
+title: Contributing to YunoHost
 ---
 
-:::warning[FIXME]
-This section is under refactoring.
-:::
+Let's go through the different ways to contribute to the project!
 
-### YunoHost depends exclusively on the participation of people like you.
+## 📢 Spread the word
 
+Talk about software freedom, [self-hosting](/admin/about_self_hosting) and YunoHost around you! \<3
 
----
+## 💰 Donate
 
-<Columns>
-  <Column className='text--center'>
-    ## <FAIcon icon='fa-heart'/> Spread the word
-  </Column>
+YunoHost is a volunteer-driven, non-profit community project. Donations help us stay afloat and dedicate more time to the project. Checkout [our donation page](https://yunohost.org/donate.html)!
 
-  <Column className='text--center'>
-    Talk about software freedom, [self-hosting](/admin/about_self_hosting) and YunoHost to your relatives and at your work. We rely on Datalove evangelists like you \<3
-  </Column>
-</Columns>
+## 🛟 Help others
 
----
+Our support relies on contributors like you. Join [the support chatroom](/community/chat_rooms) to assist new users, or see if you can [help someone on the forum](https://forum.yunohost.org/)!
 
-<Columns>
-  <Column className='text--center'>
-    ## <FAIcon icon='fa-user'/> Help users
-  </Column>
+## 📝 Improve documentation
 
-  <Column className='text--center'>
-  Our support relies on contributors like you. Just come to [the support chatroom](/community/chat_rooms) and help new users getting started, or pick a question on the <Link to="https://forum.yunohost.org/" target="_blank">Forum</Link>.
-  </Column>
-</Columns>
+Great projects require great documentation! You can [contribute to this documentation](/dev/doc/) by improving existing pages or adding new ones!
 
----
+## 🌐 Translate
 
-<Columns>
-  <Column className='text--center'>
-    ## <FAIcon icon='fa-edit'/> Write
-  </Column>
+Help make YunoHost accessible to more people by translating its interface into your language on [our translation platform](https://translate.yunohost.org/)!
 
-  <Column className='text--center'>
-  Improve this documentation by [writing new pages](/dev/doc/) or translating existing ones to your language.
-  </Column>
-</Columns>
+## 💡 Help us with design
 
----
+As a tech project, it's easy for us to get caught up in the technical details and forget about making everything intuitive and accessible for non-tech-savvy users. If you have skills in communication, visual identity, design, UX, or just general feedback on the website, documentation, installation process, or everyday use of YunoHost, we’d love to hear from you! Gget in touch with us on [the forum](https://forum.yunohost.org/), [the chat rooms](/community/chat_rooms) or [the issue tracker](https://github.com/YunoHost/issues/issues)!
 
-<Columns>
-  <Column className='text--center'>
-    ## <FAIcon icon='fa-globe'/> Translate
-  </Column>
+## ⚗️  Participate in testings
 
-  <Column className='text--center'>
-    Get involved by making YunoHost interfaces available in your language  
-    <Link to="https://translate.yunohost.org/" target="_blank">Get started</Link>!
-  </Column>
-</Columns>
+We regularly need testers for new versions of YunoHost or app updates. Checkout [the project announcements on the forum](https://forum.yunohost.org/c/announcement/8), or if there is a [pending testing for your favourite apps on the packaging dashboard](https://apps.yunohost.org/dash?filter=testings).
 
----
+## 🏷️ Refine the app catalog
 
-<Columns>
-  <Column className='text--center'>
-    ## <FAIcon icon='fa-flask'/> Test
-  </Column>
+The app catalog is an important aspect of YunoHost. We always need help to improve the app catalog experience, for example ensuring that apps are in the appropriate category, with an appropriate logo and screenshot, that their description is relevant and accurate, that they do provide relevant information in the context of YunoHost, etc. Checkout for example [this issue](https://github.com/YunoHost/issues/issues/2676) with guidelines on how to contribute on this. We're also open to feedback regarding how the whole design of the catalog could be improved!
 
-  <Column className='text--center'>
-    We need people able to test YunoHost deeply. If you find a bug, try to identify it, and report it on our <Link to="https://github.com/YunoHost/issues/issues" target="_blank">bug tracker</Link>.
-  </Column>
-</Columns>
+## 📦 Package applications
 
----
+You can extend YunoHost capabilities by packaging new applications. Have a look at [the current catalog](https://apps.yunohost.org/), the [packaging documentation](/dev/packaging/), and join us on the [app packaging chat room](/community/chat_rooms)!
 
-<Columns>
-  <Column className='text--center'>
-    ## <FAIcon icon='fa-gift'/> Package Apps
-  </Column>
+## ⚙️ Develop
 
-  <Column className='text--center'>
-    Extend YunoHost capabilities by [packaging new services and web applications](/packaging/).  
-    Have a look of [what has been done yet](https://apps.yunohost.org/)!
-  </Column>
-</Columns>
-
----
-
-<Columns>
-  <Column className='text--center'>
-    ## <FAIcon icon='fa-cog'/> Develop
-  </Column>
-
-  <Column className='text--center'>
-    You can involve in the YunoHost's development regardless of your skill.
-    Sysadmins, web developers, designers and pythonists <Link to="https://github.com/YunoHost" target="_blank">are welcome</Link>!  
-    Learn [how to contribute](/dev/core/), and join us on the [development chat room](xmpp:dev@conference.yunohost.org?join).
-  </Column>
-</Columns>
+YunoHost is built mainly using Python, Bash, and VueJS. Checkout the [developer documentation](/dev/core/), and join us on the [development chat room](/community/chat_rooms)! You can also [look for good first issues on our issue tracker](https://github.com/YunoHost/issues/issues?q=sort%3Aupdated-desc+label%3A%22Good+first+issue%22+state%3Aopen)!
