--- a/docs/dev/50.packaging/15.resources.mdx
+++ b/docs/dev/50.packaging/15.resources.mdx
@@ -1,5 +1,5 @@
 ---
-title: App resources
+title: Resources
 toc_max_heading_level: 2
 # custom_edit_link: 'https://github.com/YunoHost/yunohost/blob/dev/src/utils/resources.py'
 ---
