--- a/docs/dev/50.packaging/20.scripts/index.mdx
+++ b/docs/dev/50.packaging/20.scripts/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: The scripts
+title: App scripts
 ---
 
 App scripts are the essential logic defining what happens when an app is `install`ed, `remove`d, `upgrade`d, `backup`ed, or `restore`d. They are written in [Bash](https://en.wikipedia.org/wiki/Bash_(Unix_shell)) which is the same stuff you type in interactive mode in a terminal, though we added a bunch of custom YunoHost functions that we call `helpers` to standardize many common operations - for example adding the nginx configuration.
@@ -83,7 +83,7 @@ ynh_app_setting_set --app=$app --key=db_name --value=$db_name
 
 ## Helper system
 
-We call helpers a set of custom bash function created by the YunoHost project to standardize common operations accross all apps. They are all prefixed with `ynh_`. The full list and documentation of these helpers is available on [this page](/packaging/scripts/helpers_v2.1). Some of these helpers are now partially obsolete as they are now handled by the core via app resources.
+We call helpers a set of custom bash function created by the YunoHost project to standardize common operations accross all apps. They are all prefixed with `ynh_`. The full list and documentation of these helpers is available on [this page](/dev/packaging/scripts/helpers_v2.1). Some of these helpers are now partially obsolete as they are now handled by the core via app resources.
 
 Here is the list of the major ones:
 
@@ -137,7 +137,7 @@ url = "https://github.com/YesWiki/yeswiki/archive/refs/tags/v4.4.0.tar.gz"
 sha256 = "5ceb12d225c20de2ba3cb4ce483348ed1a8ad5b1789d4f4f8f89dc4871524007"
 ```
 
-More infos on the `source` resource in [the resource system documentation](/packaging/manifest/resources).
+More infos on the `source` resource in [the resource system documentation](/dev/packaging/manifest/resources).
 
 ## Common operations (TODO/FIXME)
 
