--- a/docs/dev/50.packaging/90.policy.mdx
+++ b/docs/dev/50.packaging/90.policy.mdx
@@ -39,6 +39,6 @@ The team may make exceptions to these criteria on a case-by-case basis, on its o
 These editorial choices do not mean that apps infringing them cannot be created, merely that they won't be included in the official catalog.
 You are free to:
 
-- [Develop your own application packages](/packaging/) (though support may be limited due to aforementioned criteria)
+- [Develop your own application packages](/dev/packaging/) (though support may be limited due to aforementioned criteria)
 - Manually install any application by using `yunohost app install <url_to_git_repo_ynh>`
 - Create and add a custom catalog source within `/etc/yunohost/apps_catalog.yml`
