--- a/docs/dev/10.doc/index.mdx
+++ b/docs/dev/10.doc/index.mdx
@@ -55,7 +55,7 @@ npm run start
 ## Contents of the repository
 
 - The **actual documentation content** is inside the `docs/` folder, for example `docs/admin/02.what_is_yunohost/index.mdx` is the "What is YunoHost" page.
-- **Images** are in `static/img/`
+- **Images** are in `static/img`
 - **Translations** are inside `i18n` folders, for example the "What is YunoHost" page translated to french is in `i18n/fr/docusaurus-plugin-content-docs/current/admin/02.what_is_yunohost/index.mdx`
 
 
