--- a/i18n/fr/docusaurus-plugin-content-docs/current/dev/15.core/25.ynh_admin.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/dev/15.core/25.ynh_admin.mdx
@@ -10,6 +10,10 @@ Avec `ynh-dev`, lancez dans le conteneur:
 ./ynh-dev use-git yunohost-admin
 ```
 
+:::danger[FIXME]
+Le reste de cette page est périmé et doit être réécrit from scratch...
+:::
+
 Ceci lance gulp, de sorte qu'à chaque fois que vous modifiez les sources, il
 recompilera le code (JS) et vous pourrez voir les changements dans le navigateur
 web (Ctrl+F5).
