--- a/i18n/fr/docusaurus-plugin-content-docs/current/dev/50.packaging/60.advanced/60.advanced_packagers.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/dev/50.packaging/60.advanced/60.advanced_packagers.mdx
@@ -4,7 +4,7 @@ title: Packageurs avancés
 
 Here comes the time:
 
-- you masterise [apps packaging](/packaging/), [package_check](https://github.com/YunoHost/package_check), [example_ynh](https://github.com/YunoHost/example_ynh) and [experimental helpers](https://github.com/YunoHost-Apps/Experimental_helpers)
+- you masterise [apps packaging](/dev/packaging/), [package_check](https://github.com/YunoHost/package_check), [example_ynh](https://github.com/YunoHost/example_ynh) and [experimental helpers](https://github.com/YunoHost-Apps/Experimental_helpers)
 - you have integrated the [YunoHost Apps Group](/community/yunohost_project_organization)
 - you know what means `¯\_(ツ)_/¯`
 - you use to say `Don't ask to ask, just ask` in the [YunoHost support room](/community/help)
