--- a/i18n/fr/docusaurus-plugin-content-docs/current/dev/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/dev/index.mdx
@@ -77,7 +77,7 @@ title: Contribute to YunoHost
   </Column>
 
   <Column className='text--center'>
-    Extend YunoHost capabilities by [packaging new services and web applications](/packaging/).  
+    Extend YunoHost capabilities by [packaging new services and web applications](/dev/packaging/).  
     Have a look of [what has been done yet](https://apps.yunohost.org/)!
   </Column>
 </Columns>
