--- a/i18n/fr/docusaurus-plugin-content-docs/current/community/05.faq.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/community/05.faq.mdx
@@ -89,7 +89,7 @@ Si vous souhaitez vraiment voir une fonctionnalité codée ou documentée, ou un
 
 #### Quelle est la politique d'inclusion des apps dans le catalogue officiel ?
 
-Voir [cette page](/packaging/policy)
+Voir [cette page](/dev/packaging/policy)
 
 #### Pourquoi n'incluez-vous pas [fonctionnalité X] ?
 
